Fix some CI warnings
See: https://gitlab.com/sosy-lab/software/cpachecker/-/pipelines/2125710773